--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "node-sass": "^4.14.1",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5"
     }
 }
