--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -25,13 +25,6 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "classnames": "^2.2.6",
-        "node-sass": "^4.14.1",
-        "react-apexcharts": "^1.3.7",
-        "react-redux": "^7.2.2",
-        "react-router-dom": "^5.2.0",
-        "reactstrap": "^8.8.1",
-        "redux": "^4.0.5",
         "@fullcalendar/bootstrap": "^4.4.2",
         "@fullcalendar/core": "^4.4.2",
         "@fullcalendar/daygrid": "^4.4.2",
@@ -42,6 +35,7 @@
         "bootstrap": "^4.5.0",
         "britecharts-react": "^0.5.4",
         "chart.js": "^2.9.3",
+        "classnames": "^2.2.6",
         "draft-js": "^0.11.5",
         "draftjs-to-html": "^0.9.1",
         "frappe-gantt": "^0.3.0",
@@ -49,9 +43,11 @@
         "html-to-draftjs": "^1.5.0",
         "jwt-decode": "^2.2.0",
         "metismenujs": "^1.2.0",
+        "node-sass": "^4.14.1",
         "nouislider-react": "^3.3.7",
         "react": "^16.13.1",
         "react-albus": "^2.0.0",
+        "react-apexcharts": "^1.3.7",
         "react-beautiful-dnd": "^13.0.0",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-paginator": "^2.1.2",
@@ -65,11 +61,16 @@
         "react-dropzone": "^11.0.1",
         "react-flatpickr": "^3.10.0",
         "react-rating": "^2.0.5",
+        "react-redux": "^7.2.2",
         "react-router-auth": "^1.0.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
         "react-select": "^3.1.0",
         "react-simplemde-editor": "^4.1.1",
         "react-text-mask": "^5.4.3",
+        "react-window": "^1.8.6",
+        "reactstrap": "^8.8.1",
+        "redux": "^4.0.5",
         "redux-saga": "^1.1.3",
         "simplebar-react": "^2.2.0"
     }
