--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@fullcalendar/daygrid": "^4.4.2",
         "@fullcalendar/interaction": "^4.4.2",
         "@fullcalendar/react": "^4.4.2",
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
         "apexcharts": "^3.19.2",
         "availity-reactstrap-validation": "2.6.1",
         "bootstrap": "^4.5.0",
