--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "moment-timezone": "^0.5.32",
         "node-sass": "^4.14.1",
         "nouislider-react": "^3.3.7",
+        "prop-types": "^15.7.2",
         "react-albus": "^2.0.0",
         "react-apexcharts": "^1.3.7",
         "react-beautiful-dnd": "^13.0.0",
