--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-bootstrap-table2-paginator": "^2.1.2",
         "react-bootstrap-table2-toolkit": "^2.1.3",
         "react-bootstrap-typeahead": "^5.0.0-rc.2",
+        "react-calendar": "^3.3.0",
         "react-chartjs-2": "^2.9.0",
         "react-cookie": "^4.0.3",
         "react-datepicker": "^2.16.0",
