--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-albus": "^2.0.0",
         "react-apexcharts": "^1.3.7",
         "react-beautiful-dnd": "^13.0.0",
+        "react-big-calendar": "^0.30.0",
         "react-bootstrap": "^1.4.3",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-paginator": "^2.1.2",
