--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
+        "@material-ui/pickers": "^3.2.10",
         "apexcharts": "^3.19.2",
         "availity-reactstrap-validation": "2.6.1",
         "bootstrap": "^4.5.0",
