--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19.2",
-        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
@@ -25,66 +24,26 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "@fullcalendar/bootstrap": "^4.4.2",
-        "@fullcalendar/core": "^4.4.2",
-        "@fullcalendar/daygrid": "^4.4.2",
-        "@fullcalendar/interaction": "^4.4.2",
-        "@fullcalendar/react": "^4.4.2",
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
-        "@material-ui/pickers": "^3.2.10",
         "apexcharts": "^3.19.2",
-        "availity-reactstrap-validation": "2.6.1",
-        "bootstrap": "^4.5.0",
+        "bootstrap": "^4.6.0",
         "britecharts-react": "^0.5.4",
-        "chart.js": "^2.9.3",
         "classnames": "^2.2.6",
-        "date-fns": "^2.16.1",
-        "draft-js": "^0.11.5",
-        "draftjs-to-html": "^0.9.1",
-        "frappe-gantt": "^0.3.0",
-        "google-maps-react": "^2.0.6",
-        "html-to-draftjs": "^1.5.0",
-        "jwt-decode": "^2.2.0",
         "material-ui-search-bar": "^1.0.0",
-        "metismenujs": "^1.2.0",
         "moment-timezone": "^0.5.32",
-        "node-sass": "^4.14.1",
-        "nouislider-react": "^3.3.7",
         "prop-types": "^15.7.2",
-        "react-albus": "^2.0.0",
         "react-apexcharts": "^1.3.7",
-        "react-beautiful-dnd": "^13.0.0",
         "react-big-calendar": "^0.30.0",
         "react-bootstrap": "^1.4.3",
-        "react-bootstrap-table-next": "^4.0.3",
-        "react-bootstrap-table2-paginator": "^2.1.2",
-        "react-bootstrap-table2-toolkit": "^2.1.3",
-        "react-bootstrap-typeahead": "^5.0.0-rc.2",
-        "react-calendar": "^3.3.0",
-        "react-chartjs-2": "^2.9.0",
-        "react-cookie": "^4.0.3",
-        "react-datepicker": "^2.16.0",
         "react-dom": "^16.13.1",
-        "react-draft-wysiwyg": "^1.14.5",
-        "react-dropzone": "^11.0.1",
-        "react-flatpickr": "^3.10.0",
         "react-live-clock": "^5.0.13",
         "react-moment": "^1.1.1",
-        "react-rating": "^2.0.5",
         "react-redux": "^7.2.2",
-        "react-router-auth": "^1.0.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.1",
-        "react-select": "^3.1.0",
-        "react-simplemde-editor": "^4.1.1",
-        "react-text-mask": "^5.4.3",
-        "react-window": "^1.8.6",
         "reactstrap": "^8.8.1",
         "redux": "^4.0.5",
-        "redux-persist": "^6.0.0",
-        "redux-saga": "^1.1.3",
-        "simplebar-react": "^2.2.0"
+        "redux-persist": "^6.0.0"
     }
 }
